Fix #211: Added css to move command palette to prevent cut off

--- a/ts-apps/jl4-web/src/style.css
+++ b/ts-apps/jl4-web/src/style.css
@@ -61,3 +61,16 @@
     border: 1px solid grey;
   }
 }
+
+.quick-input-widget {
+  position: absolute !important;
+  left: 25px !important;
+  right: auto !important;
+  top: 25px !important;
+}
+
+div[widgetid="editor.contrib.quickInputWidget"] {
+  position: absolute !important;
+  left: 0 !important;
+  right: auto !important;
+}
